--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,41 +15,52 @@ body {
 	font-family: $body-copy;
 	color: $blue;
 	display: grid;
-	grid-template-columns: 15% repeat(6, 1fr) 15%;
+	grid-template-columns: [full-start] minmax(1em, 15%) 1fr [main-start] repeat(4, 1fr) [main-end] 1fr 15% [full-end];
 	grid-auto-rows: minmax(100vh, auto);
 	align-items: center;
 }
 
-.job-title {
-	align-self: flex-start;
+a {
+	color: $white;
+
+	&:hover .fa {
+		transform: scale(1.1);
+	}
+}
+
+.fa {
+	transition: 100ms all ease-in-out;
+}
+
+p {
+	margin-bottom: 2rem;
 }
 
 .name {
+	grid-column: 2 / 8;
+	grid-row: 1;
 	line-height: 1;
 	font-size: 15rem;
 	font-family: $display-font;
 	transform: rotate(-7deg);
 	margin-bottom: 7.5rem;
 	text-align: center;
-	grid-column: 2 / 8;
-	grid-row: 1;
 }
 
 .header {
 	grid-column: 1;
 	font-size: 10rem;
 	writing-mode: sideways-lr;
-	color: $white;
 	font-family: $display-font;
 	justify-self: center;
 }
 
 .section {
-	grid-column: 3 / 7;
+	grid-column: main;
 }
 
 .bg {
-	grid-column: 1 / 9;
+	grid-column: full;
 	background: $blue;
 	align-self: stretch;
 	z-index: -1;
@@ -61,6 +72,7 @@ body {
 
 	&-header {
 		grid-row: 2;
+		color: $white;
 	}
 
 	&-bg {
@@ -69,23 +81,49 @@ body {
 }
 
 .experience {
+	margin: 20rem 0;
 	grid-row: 3;
 	
 	&-header {
 		grid-row: 3;
-		color: $blue;
 	}
 }
 
 .contact {
-	grid-row: 4;
-	color: $white;
+	position: fixed;
+	width: 215px;
+	height: 215px;
+	font-size: 3rem;
+	bottom: 0;
+	right: 0;
+	justify-self: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-end;
+	z-index: 1;
 
-	&-header {
-		grid-row: 4;
-	}
+	&-list {
+		display: grid;
+		grid-template-columns: 50px 50px;
+		grid-template-rows: 50px 50px;
+		justify-items: center;
+		align-items: center;
+		background-clip: text;
+		color: $white;
 
-	&-bg {
-		grid-row: 4;
+		&::before {
+			content: "";
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 40px;
+			position: absolute;
+			background: $dark-red;
+			transform: skewX(-40deg);
+			transform-origin: bottom right;
+			z-index: -1;
+			opacity: 0.7;
+		}
 	}
 }
