--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,15 +9,8 @@ $white: #fff;
 
 @font-face {
   font-family: 'Fenwick Olden';
-  src: url('../assets/fenwick_olden.otf');
+  src: url('../assets/fonts/fenwick_olden.otf');
 }
-
-@font-face {
-  font-family: 'Byington Regular';
-  src: url('../assets/byington_rg.otf');
-}
-
-
 
 $display-font: 'Fenwick Olden';
 $body-copy: 'Maven Pro';
