--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ h2 {
 }
 
 h3 {
-	font-size: 2.25rem;
+	font-size: 2rem;
 }
 
 p {
@@ -78,53 +78,67 @@ p {
 }
 
 .experience {
-
-	h1 {
-		text-align: center;
-		font-size: 4rem;
-		color: $dark-gray;
-		margin-bottom: 2rem;
-	}
-	margin: 20rem 0;
 	grid-row: 3;
-	
+	margin: 20rem 0;
+
 	&-header {
 		grid-row: 3;
 	}
-}
+	
+	.category {
+		text-align: center;
+		font-size: 3rem;
+		color: $dark-gray;
+		margin-bottom: 2rem;
+		position: relative;
 
-
-
-.card {
-	margin-bottom: 5rem;
-	position: relative;
-
-	.date {
-		position: absolute;
-		top: 0;
-		right: 0;
+		// &::after {
+		// 	content: "";
+		// 	width: 100%;
+		// 	border-bottom: 1px solid $light-gray;
+		// 	position: absolute;
+		// 	top: 100%;
+		// 	left: 50%;
+		// 	transform: translateX(-50%);
+		// }
 	}
 
-	.company-img {
-		max-width: 150px;
-		position: absolute;
-		top: 50px;
-		right: 0;
+	.card {
+		display: grid;
+		grid-template-columns: auto auto;
+		grid-template-rows: 50% 50%;
+		align-items: end;
+		margin-bottom: 4rem;
+		position: relative;
+		height: 70px;
+
+		&-list {
+			margin-bottom: 2rem;
+		}
+
+		.title {
+			grid-row: 1;
+			grid-column: 1;
+		}
+
+		.company {
+			grid-row: 2;
+			grid-column: 1;
+		}
+
+		.date {
+			grid-row: 1;
+			grid-column: 2;
+			justify-self: end;
+		}
+
+		.location {
+			grid-row: 2;
+			grid-column: 2;
+			justify-self: end;
+		}
 	}
-
-	&.insiten 		  { @include img('insiten.png'); }
-	&.jwt			      { @include img('jwt.png') }
-	&.doable 			  { @include img('doable.png') }
-	&.wunderman 		{ @include img('wunderman.svg') }
-	&.digitalcrafts { @include img('digitalcrafts.png') }
 }
-
-
-
-// .card:hover::after {
-// 	transform: translateX(0);
-// 	background-color: blue;
-// }
 
 .contact {
 	position: fixed;
