--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,6 +75,12 @@ p {
 	&-bg {
 		grid-row: 2;
 	}
+
+	a,
+	a:active,
+	a:visited {
+		color: $white;
+	}
 }
 
 .experience {
@@ -91,16 +97,6 @@ p {
 		color: $dark-gray;
 		margin-bottom: 2rem;
 		position: relative;
-
-		// &::after {
-		// 	content: "";
-		// 	width: 100%;
-		// 	border-bottom: 1px solid $light-gray;
-		// 	position: absolute;
-		// 	top: 100%;
-		// 	left: 50%;
-		// 	transform: translateX(-50%);
-		// }
 	}
 
 	.card {
@@ -108,7 +104,7 @@ p {
 		grid-template-columns: auto auto;
 		grid-template-rows: 50% 50%;
 		align-items: end;
-		margin-bottom: 4rem;
+		margin-bottom: 3rem;
 		position: relative;
 		height: 70px;
 
@@ -121,7 +117,7 @@ p {
 			grid-column: 1;
 		}
 
-		.company {
+		.organization {
 			grid-row: 2;
 			grid-column: 1;
 		}
@@ -136,6 +132,12 @@ p {
 			grid-row: 2;
 			grid-column: 2;
 			justify-self: end;
+		}
+
+		a,
+		a:active,
+		a:visited {
+			color: $blue;
 		}
 	}
 }
