--- a/css/styles.css
+++ b/css/styles.css
@@ -53,23 +53,20 @@ table {
   box-sizing: border-box; }
 
 html {
-  font-size: 10px; }
+  font-size: 7.5px; }
 
 body {
-  line-height: 1.5;
+  line-height: 2;
   font-size: 2rem;
   font-family: "Maven Pro";
   color: #2b2d42;
   display: grid;
-  grid-template-columns: [full-start] minmax(1em, 15%) [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 15% [full-end];
+  grid-template-columns: [full-start] 1em [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 1em [full-end];
   grid-auto-rows: minmax(100vh, auto);
   align-items: center; }
 
-h2 {
-  font-size: 2.5rem; }
-
-h3 {
-  font-size: 2rem; }
+h2, h3, p {
+  font-size: 1.5rem; }
 
 p {
   margin-bottom: 2rem; }
@@ -78,21 +75,23 @@ p {
   grid-column: container;
   grid-row: 1;
   line-height: 1;
-  font-size: 15rem;
+  font-size: 7rem;
   font-family: "Fenwick Olden";
   transform: rotate(-9deg);
   margin-bottom: 7.5rem;
   text-align: center; }
 
 .header {
-  grid-column: 1;
-  font-size: 10rem;
-  writing-mode: sideways-lr;
+  grid-column: container;
+  justify-self: center;
+  align-self: start;
+  margin-top: 4vh;
+  font-size: 5rem;
   font-family: "Fenwick Olden";
-  justify-self: center; }
+  transform: rotate(-9deg); }
 
 .section {
-  grid-column: main; }
+  grid-column: container; }
 
 .bg {
   grid-column: full;
@@ -115,7 +114,7 @@ p {
 
 .experience {
   grid-row: 3;
-  margin: 10rem 0; }
+  margin: 20rem 0 10rem; }
   .experience-header {
     grid-row: 3; }
   .experience .category {
@@ -131,7 +130,7 @@ p {
     align-items: end;
     margin-bottom: 3rem;
     position: relative;
-    height: 70px; }
+    height: 7rem; }
     .experience .card:last-child {
       margin-bottom: 6rem; }
     .experience .card .title {
@@ -155,42 +154,100 @@ p {
 
 .contact {
   position: fixed;
-  width: 215px;
-  height: 215px;
-  font-size: 3rem;
+  width: 100%;
   bottom: 0;
-  right: 0;
-  justify-self: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  left: 0;
   z-index: 1; }
   .contact-list {
-    display: grid;
-    grid-template-columns: 50px 50px;
-    grid-template-rows: 50px 50px;
-    justify-items: center;
-    align-items: center;
-    background-clip: text;
-    color: #fff; }
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
     .contact-list::before {
       content: "";
       width: 100%;
       height: 100%;
       top: 0;
-      left: 40px;
       position: absolute;
       background: #d90429;
-      transform: skewX(-40deg);
-      transform-origin: bottom right;
       z-index: -1;
       opacity: 0.7; }
   .contact-link {
+    font-size: 3rem;
     color: #fff; }
     .contact-link:hover .fa {
       transform: scale(1.1); }
   .contact-icon {
     transition: 100ms all ease-in-out; }
+
+@media screen and (min-width: 360px) {
+  h2 {
+    font-size: 2rem; }
+
+  h3, p {
+    font-size: 1.75rem; } }
+@media screen and (min-width: 480px) {
+  html {
+    font-size: 8px; }
+
+  body {
+    min-height: 600px; } }
+@media screen and (min-width: 768px) {
+  body {
+    line-height: 1.5;
+    grid-template-columns: [full-start] minmax(1em, 10%) [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 10% [full-end]; }
+
+  h2 {
+    font-size: 2.5rem; }
+
+  h3, p {
+    font-size: 2rem; }
+
+  .name {
+    font-size: 15rem; }
+
+  .header {
+    grid-column: 1;
+    font-size: 10rem;
+    writing-mode: sideways-lr;
+    align-self: center;
+    transform: rotate(0); }
+
+  .section {
+    grid-column: main; }
+
+  .experience {
+    margin-bottom: 20rem; }
+
+  .contact {
+    width: 215px;
+    height: 215px;
+    left: auto;
+    right: 0;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end; }
+    .contact-list {
+      display: grid;
+      grid-template-columns: 5rem 5rem;
+      grid-template-rows: 5rem 5rem;
+      justify-items: center;
+      align-items: center;
+      color: #fff; }
+      .contact-list::before {
+        left: 4rem;
+        transform: skewX(-40deg);
+        transform-origin: bottom right; } }
+@media screen and (min-width: 1100px) {
+  html {
+    font-size: 9px; }
+
+  body {
+    line-height: 1.5;
+    grid-template-columns: [full-start] minmax(1em, 15%) [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 15% [full-end]; } }
+@media screen and (min-width: 1400px) {
+  html {
+    font-size: 10px; } }
 
 /*# sourceMappingURL=styles.css.map */
