tightens styles further

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,18 @@
+// =================
+// COLORS
+// =================
+
 $blue: #2b2d42;
 $red: #ef233c;
 $dark-red: #d90429;
 $dark-gray: #8d99ae;
 $light-gray: #edf2f4;
 $white: #fff;
+
+
+// =================
+// TYPOGRAPHY
+// =================
 
 @import url('https://fonts.googleapis.com/css?family=Maven+Pro');
 
