--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@ table {
 @font-face {
   font-family: 'Fenwick Olden';
   src: url("../assets/fonts/fenwick_olden.otf"); }
+:selection {
+  color: #fff;
+  background: #d90429; }
+
 * {
   box-sizing: border-box; }
 
@@ -71,16 +75,6 @@ h2, h3, p {
 p {
   margin-bottom: 2rem; }
 
-.name {
-  grid-column: container;
-  grid-row: 1;
-  line-height: 1;
-  font-size: 7rem;
-  font-family: "Fenwick Olden";
-  transform: rotate(-9deg);
-  margin-bottom: 7.5rem;
-  text-align: center; }
-
 .header {
   grid-column: container;
   justify-self: center;
@@ -98,6 +92,16 @@ p {
   background: #2b2d42;
   align-self: stretch;
   z-index: -1; }
+
+.name {
+  grid-column: container;
+  grid-row: 1;
+  line-height: 1;
+  font-size: 7rem;
+  font-family: "Fenwick Olden";
+  transform: rotate(-9deg);
+  margin-bottom: 7.5rem;
+  text-align: center; }
 
 .about {
   grid-row: 2;
@@ -187,10 +191,7 @@ p {
     font-size: 1.75rem; } }
 @media screen and (min-width: 480px) {
   html {
-    font-size: 8px; }
-
-  body {
-    min-height: 600px; } }
+    font-size: 8px; } }
 @media screen and (min-width: 768px) {
   body {
     line-height: 1.5;
@@ -244,7 +245,6 @@ p {
     font-size: 9px; }
 
   body {
-    line-height: 1.5;
     grid-template-columns: [full-start] minmax(1em, 15%) [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 15% [full-end]; } }
 @media screen and (min-width: 1400px) {
   html {
