manually auto-prefixes styles for cross-browser compatability

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,10 +3,8 @@
 // =================
 
 $blue: #2b2d42;
-$red: #ef233c;
-$dark-red: #d90429;
-$dark-gray: #8d99ae;
-$light-gray: #edf2f4;
+$red: #d90429;
+$gray: #8d99ae;
 $white: #fff;
 
 
