--- a/css/styles.css
+++ b/css/styles.css
@@ -49,23 +49,48 @@ table {
 @font-face {
   font-family: 'Fenwick Olden';
   src: url("../assets/fonts/fenwick_olden.otf"); }
-@keyframes name-fadein {
+@-webkit-keyframes name-fadein {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(-300px);
     transform: translateY(-300px); }
   100% {
     opacity: 1;
+    -webkit-transform: rotate(-9px) translateY(0);
     transform: rotate(-9px) translateY(0); } }
-@keyframes menu-fadein {
+@keyframes name-fadein {
   0% {
+    opacity: 0;
+    -webkit-transform: translateY(-300px);
+    transform: translateY(-300px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: rotate(-9px) translateY(0);
+    transform: rotate(-9px) translateY(0); } }
+@-webkit-keyframes menu-fadein {
+  0% {
+    -webkit-transform: translateX(100%);
     transform: translateX(100%); }
   100% {
+    -webkit-transform: translateX(0);
     transform: translateX(0); } }
-:selection {
+@keyframes menu-fadein {
+  0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%); }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); } }
+::selection {
+  color: #fff;
+  background: #d90429; }
+
+::-moz-selection {
   color: #fff;
   background: #d90429; }
 
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 html {
@@ -75,6 +100,8 @@ body {
   display: grid;
   grid-template-columns: [full-start] 1em [container-start] 1fr [main-start] repeat(4, 1fr) [main-end] 1fr [container-end] 1em [full-end];
   grid-auto-rows: minmax(100vh, auto);
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   line-height: 2;
   font-size: 2rem;
@@ -90,10 +117,13 @@ p {
 .header {
   grid-column: container;
   justify-self: center;
+  -ms-flex-item-align: start;
   align-self: start;
   margin-top: 4vh;
   font-size: 5rem;
   font-family: "Fenwick Olden";
+  -webkit-transform: rotate(-9deg);
+  -ms-transform: rotate(-9deg);
   transform: rotate(-9deg); }
 
 .section {
@@ -102,6 +132,7 @@ p {
 .bg {
   grid-column: full;
   background: #2b2d42;
+  -ms-flex-item-align: stretch;
   align-self: stretch;
   z-index: -1; }
 
@@ -111,9 +142,12 @@ p {
   line-height: 1;
   font-size: 7rem;
   font-family: "Fenwick Olden";
+  -webkit-transform: rotate(-9deg);
+  -ms-transform: rotate(-9deg);
   transform: rotate(-9deg);
   margin-bottom: 7.5rem;
   text-align: center;
+  -webkit-animation: name-fadein 600ms;
   animation: name-fadein 600ms; }
 
 .about {
@@ -144,6 +178,8 @@ p {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: 50% 50%;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: end;
     margin-bottom: 3rem;
     position: relative;
@@ -175,11 +211,19 @@ p {
   bottom: 0;
   left: 0;
   z-index: 1;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
   transform: translateX(100%);
+  -webkit-animation: menu-fadein 400ms 700ms forwards;
   animation: menu-fadein 400ms 700ms forwards; }
   .contact-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center; }
     .contact-list::before {
       content: "";
@@ -194,8 +238,12 @@ p {
     font-size: 3rem;
     color: #fff; }
     .contact-link:hover .fa {
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
       transform: scale(1.1); }
   .contact-icon {
+    -webkit-transition: 100ms all ease-in-out;
+    -o-transition: 100ms all ease-in-out;
     transition: 100ms all ease-in-out; }
 
 @media screen and (min-width: 360px) {
@@ -224,8 +272,13 @@ p {
   .header {
     grid-column: 1;
     font-size: 10rem;
+    -webkit-writing-mode: sideways-lr;
+    -ms-writing-mode: sideways-lr;
     writing-mode: sideways-lr;
+    -ms-flex-item-align: center;
     align-self: center;
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
     transform: rotate(0); }
 
   .section {
@@ -240,20 +293,35 @@ p {
     left: auto;
     right: 0;
     justify-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end; }
     .contact-list {
       display: grid;
       grid-template-columns: 5rem 5rem;
       grid-template-rows: 5rem 5rem;
       justify-items: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       color: #fff; }
       .contact-list::before {
         left: 4rem;
+        -webkit-transform: skewX(-40deg);
+        -ms-transform: skewX(-40deg);
         transform: skewX(-40deg);
+        -webkit-transform-origin: bottom right;
+        -ms-transform-origin: bottom right;
         transform-origin: bottom right; } }
 @media screen and (min-width: 1100px) {
   html {
