--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,13 +1,47 @@
-@keyframes name-fadein {
+@-webkit-keyframes name-fadein {
 
 	0% {
 		opacity: 0;
-		transform: translateY(-300px);
+		-webkit-transform: translateY(-300px);
+		        transform: translateY(-300px);
 	}
 
 	100% {
 		opacity: 1;
-		transform: rotate(-9px) translateY(0);
+		-webkit-transform: rotate(-9px) translateY(0);
+		        transform: rotate(-9px) translateY(0);
+	}
+
+}
+
+
+@keyframes name-fadein {
+
+	0% {
+		opacity: 0;
+		-webkit-transform: translateY(-300px);
+		        transform: translateY(-300px);
+	}
+
+	100% {
+		opacity: 1;
+		-webkit-transform: rotate(-9px) translateY(0);
+		        transform: rotate(-9px) translateY(0);
+	}
+
+}
+
+
+@-webkit-keyframes menu-fadein {
+
+	0% {
+		-webkit-transform: translateX(100%);
+		        transform: translateX(100%);
+	}
+
+	100% {
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
 	}
 
 }
@@ -16,11 +50,13 @@
 @keyframes menu-fadein {
 
 	0% {
-		transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		        transform: translateX(100%);
 	}
 
 	100% {
-		transform: translateX(0);
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
 	}
 
 }
