--- a/scss/main.scss
+++ b/scss/main.scss
@@ -274,11 +274,14 @@ p {
 	.header {
 		grid-column: 1;
 		font-size: 10rem;
+		-webkit-writing-mode: sideways-lr;
+		    -ms-writing-mode: sideways-lr;
+		        writing-mode: sideways-lr;
 		-ms-flex-item-align: center;
 		    align-self: center;
-		-webkit-transform: rotate(-90deg);
-		    -ms-transform: rotate(-90deg);
-		        transform: rotate(-90deg);
+		-webkit-transform: rotate(180deg);
+		    -ms-transform: rotate(180deg);
+		        transform: rotate(180deg);
 	}
 
 	.section {
