--- a/scss/main.scss
+++ b/scss/main.scss
@@ -274,9 +274,9 @@ p {
 	.header {
 		grid-column: 1;
 		font-size: 10rem;
-		-webkit-writing-mode: sideways-lr;
-		    -ms-writing-mode: sideways-lr;
-		        writing-mode: sideways-lr;
+		-webkit-writing-mode: vertical-lr;
+		    -ms-writing-mode: vertical-lr;
+		        writing-mode: vertical-lr;
 		-ms-flex-item-align: center;
 		    align-self: center;
 		-webkit-transform: rotate(180deg);
