updates copy; reduces vertical movement from name animation

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -2,8 +2,8 @@
 
 	0% {
 		opacity: 0;
-		-webkit-transform: translateY(-300px);
-		        transform: translateY(-300px);
+		-webkit-transform: translateY(-0);
+		        transform: translateY(-0);
 	}
 
 	100% {
@@ -19,8 +19,8 @@
 
 	0% {
 		opacity: 0;
-		-webkit-transform: translateY(-300px);
-		        transform: translateY(-300px);
+		-webkit-transform: translateY(-0);
+		        transform: translateY(-0);
 	}
 
 	100% {
