--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,7 +84,7 @@ p {
 
 .name-text {
 	line-height: 1;
-	font-size: 15rem;
+	font-size: 7rem;
 	font-family: $display-font;
 	-webkit-transform: rotate(-9deg);
 	    -ms-transform: rotate(-9deg);
@@ -271,7 +271,7 @@ p {
 		font-size: 2rem;
 	}
 
-	.name {
+	.name-text {
 		font-size: 15rem;
 	}
 
